# dump-tf-schema

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
