[package]
name = "dump-tf-schema"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.3"

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
prost = "0.6"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
structopt = "0.3"
tempfile = "3.1"
tokio = { version = "0.2", features = ["macros", "process", "uds"] }
tonic = "0.3"
tower = "0.3"
zip = "0.5"
